--- a/assets/resources/styles/less/modules/_portfolio.less
+++ b/assets/resources/styles/less/modules/_portfolio.less
@@ -1053,12 +1053,13 @@ span.ac-sign {
         width: 100%;
     }
 
-    h3 {
-        font-size: 30px;
+    .h {
+        font-size: 1.6em;
         line-height: 40px;
         margin-left: -1px;
         font-family: 'Ageo';
         letter-spacing: 0em;
+        color: #444;
     }
 }
 
@@ -1271,7 +1272,9 @@ section:after {
 .site-logo img {
     width: 100%
 }
-
+.site-logo a{
+    display: block;
+}
 .site-header.classic_menu .menu-toggle,
 .site-header.classic_menu .sub-back {
     display: none
@@ -2743,7 +2746,7 @@ ul.product-tags li a {
 
     .menu-widget-right,
     .menu-widget-left {
-        bottom: 50px;
+        bottom: 108px;
         left: 0;
 
     }
