--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -24,7 +24,7 @@
     position: relative;
 }
 
-#abt.is-inview>div>div>div::before {
+#abt>div>div>div.is-inview::before {
     width: 100%;
     transition: width 1s ease-out;
     transition-delay: .5s;
@@ -1908,7 +1908,137 @@
         right: 13%;
     }
 }
+.kedar {
+    .module--header__image {
+        position: relative;
+        height: 100%;
+        width: 100%;
+        display: -webkit-box !important;
+        display: -ms-flexbox !important;
+        display: flex !important;
+    }
 
+    .module--header__bg {
+        display: inherit;
+    position: absolute;
+    top: 21%;
+    right: 39%;
+   
+    transform: translate(16%, -8%);
+    width: auto;
+    height: 
+622px
+;
+
+    }
+
+    .hro-img {
+        // display: inherit;
+        // position: absolute;
+        // top: 50%;
+        // left: 50%;
+        // -webkit-transform: translate(-50%,-50%);
+        // transform: translate(-50%,-50%);
+        // width: auto;
+        display: inherit;
+    position: absolute;
+    top: -438px;
+    margin: auto;
+    left: 0;
+    width: auto;
+    right: 0px;
+    height: 800px;
+    }
+
+    .el-bg {
+        background-image: url(/assets/resources/img/patra-elements/Patra-Icons.png);
+        position: absolute;
+        z-index: 4;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+
+    .el1 {
+        width: 40px;
+        height: 34px;
+        background-position: -43px;
+        top: 24%;
+        left: 18%;
+    }
+
+    .el2 {
+        width: 40px;
+        height: 40px;
+        background-position: 1px;
+        top: 36%;
+        left: 25%;
+    }
+
+    .el3 {
+        width: 50px;
+        height: 30px;
+        background-position: -90px;
+        top: 81%;
+        left: 26%;
+    }
+
+    .el4 {
+        width: 50px;
+        height: 33px;
+        background-position: -150px;
+        top: 15%;
+        right: 20%;
+    }
+
+    .el5 {
+        width: 40px;
+        height: 36px;
+        background-position: -288px;
+        top: 26%;
+        right: 9%;
+    }
+
+    .el6 {
+        width: 40px;
+        height: 33px;
+        background-position: -208px;
+        bottom: 21%;
+        right: 13%;
+    }
+}
+.flx-k{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 100%;
+    /* flex-direction: row; */
+    align-content: center;
+    padding: 0 8%;
+    margin-bottom: 10%;
+    .f-1{
+        width: 30%;
+    }
+    .f-2{
+        width: 60%;
+    }
+}
+.flx-k1{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 100%;
+    /* flex-direction: row; */
+    align-content: center;
+    padding: 0 6%;
+    margin-bottom: 30%;
+    padding-top: 15%;
+    .f-1{
+        width: 22%;
+    }
+    .f-2{
+        width: 68%;
+    }
+}
 .patr {
     .module--header__image {
         position: relative;
@@ -2471,7 +2601,7 @@
 
 #project p {
     margin: 0px;
-    font-size: 16px;
+    // font-size: 16px;
     letter-spacing: 1px;
     color: #ffffff;
     overflow: hidden;
@@ -2519,7 +2649,8 @@
 #project>div>div>div ul li,
 #project {
     color: #fff;
-    font-size: calc(18px + 10 * ((100vw - 320px) / 1920));
+    font-size: 1.2em;
+    // font-size: calc(18px + 10 * ((100vw - 320px) / 1920));
     line-height: calc(28px + 10 * ((100vw - 320px) / 1920));
     margin-top: 0px;
 }
@@ -2534,7 +2665,10 @@
     letter-spacing: 3px;
     font-family: 'Ageo-Semibold';
 }
-
+#project>div>div>div ul li p{
+    font-size: 0.9em;
+    letter-spacing: 1px;
+}
 #abt {
     position: relative;
 }
@@ -2564,7 +2698,7 @@
 #project>div>div>div .grdi2 li,
 #project {
     color: var(--avana);
-    font-size: calc(18px + 10 * ((100vw - 320px) / 1920));
+    // font-size: calc(18px + 10 * ((100vw - 320px) / 1920));
     line-height: calc(28px + 10 * ((100vw - 320px) / 1920));
     margin-top: 0px;
 }
@@ -2778,6 +2912,8 @@
 
 .spline_p {
     font-family: 'Ageo';
+    font-size: 1.2em;
+    letter-spacing: 1px;
 }
 
 .text_anim div {
@@ -2949,11 +3085,11 @@
 #portf div.text_anim.spline_p,
 #studio_p div.text_anim.spline_p,
 #filosofia div.text_anim.spline_p {
-    padding-left: 0.25vw;
+    padding-left: 0;
     letter-spacing: 2px;
-    margin-top: 50px;
+    margin-top: 19px;
     line-height: 2;
-    font-size: 16px;
+    font-size: 19px;
     letter-spacing: 0.7px;
 }
 
@@ -3006,7 +3142,7 @@
     right: 0px;
     margin: auto !important;
     z-index: 10;
-    top: 15vh;
+    top: 5vh;
 }
 
 #marquee figure video {
@@ -3192,7 +3328,77 @@
     transform: scale(1);
     transition: all 1s ease-out;
 }
+.blocco div.text_anim {
+    grid-column: 3 / 23;
+}
 
+#portf p,
+#colori p {
+    margin-top: 30px;
+    padding-left: 0;
+    font-size: calc(12px + 10 * ((100vw - 320px) / 1920));
+    line-height: calc(24px + 10 * ((100vw - 320px) / 1920));
+}
+
+.kedar h2 {
+    color: var(--black);
+    font-size: calc(50px + 10 * ((100vw - 320px) / 1920));
+    line-height: calc(55px + 10 * ((100vw - 320px) / 1920));
+    font-family: 'NeueHaasDisplay-me';
+    letter-spacing: 1px;
+    text-transform: uppercase;
+}
+
+.kedar div p {
+    margin-top: 30px;
+    padding-left: 0;
+    font-size: calc(15px + 10 * ((100vw - 320px) / 1920));
+    line-height: calc(28px + 10 * ((100vw - 320px) / 1920));
+    padding-bottom: 150px;
+}
+
+.kedar div.right_block,
+.kedar div.left_block {
+    margin-bottom: 170px;
+}
+
+.kedar div.full_image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transform: scale(1.3);
+}
+
+.kedar div.is-inview.full_image img {
+    // transform: scale(1);
+    // transition: transform 2s cubic-bezier(.215, .61, .355, 1);
+    // transition-delay: .5s;
+}
+
+.kedar div figure {
+    // opacity: 0;
+    // transform: translateY(150px);
+    // overflow: hidden;
+}
+
+
+
+.kedar div figure img {
+    width: 100%;
+    // transform: scale(1.2);
+}
+
+.kedar div.is-inview figure {
+    // opacity: 1;
+    // transform: translateY(0px);
+    // transition: all 1s ease-out;
+    // transition-delay: .5s;
+}
+
+.kedar div.is-inview figure img {
+    // transform: scale(1);
+    // transition: all 1s ease-out;
+}
 .cer {
     padding: 0 13%;
     margin-top: 10%;
@@ -3963,7 +4169,7 @@
                 width: 100%;
 
                 h1 {
-                    font-size: 33px;
+                    font-size: 30px;
                     line-height: 43px;
                 }
             }
