--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -2015,6 +2015,7 @@
     align-content: center;
     padding: 0 8%;
     margin-bottom: 10%;
+        padding-bottom: 10%;
     .f-1{
         width: 30%;
     }
