--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -6437,6 +6437,7 @@ header {
       align-content: center;
   padding: 0 8%;
   margin-bottom: 10%;
+  padding-bottom: 10%;
 }
 .flx-k .f-1 {
   width: 30%;
