--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -6422,6 +6422,82 @@ header {
   bottom: 21%;
   right: 13%;
 }
+.dharan .module--header__image {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
+}
+.dharan .module--header__bg {
+  display: inherit;
+  position: absolute;
+  top: 30%;
+  left: 20%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(24%, -30%);
+  width: auto;
+}
+.dharan .hro-img {
+  display: inherit;
+  position: absolute;
+  top: -360px;
+  margin: auto;
+  left: 0;
+  width: auto;
+  right: 0px;
+  height: 670px;
+}
+.dharan .el-bg {
+  background-image: url(/assets/resources/img/patra-elements/Patra-Icons.png);
+  position: absolute;
+  z-index: 4;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.dharan .el1 {
+  width: 40px;
+  height: 34px;
+  background-position: -43px;
+  top: 24%;
+  left: 18%;
+}
+.dharan .el2 {
+  width: 40px;
+  height: 40px;
+  background-position: 1px;
+  top: 36%;
+  left: 25%;
+}
+.dharan .el3 {
+  width: 50px;
+  height: 30px;
+  background-position: -90px;
+  top: 81%;
+  left: 26%;
+}
+.dharan .el4 {
+  width: 50px;
+  height: 33px;
+  background-position: -150px;
+  top: 15%;
+  right: 20%;
+}
+.dharan .el5 {
+  width: 40px;
+  height: 36px;
+  background-position: -288px;
+  top: 26%;
+  right: 9%;
+}
+.dharan .el6 {
+  width: 40px;
+  height: 33px;
+  background-position: -208px;
+  bottom: 21%;
+  right: 13%;
+}
 .flx-k {
   display: -webkit-box;
   display: -ms-flexbox;
