--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -2006,6 +2006,104 @@
         right: 13%;
     }
 }
+.dharan {
+    .module--header__image {
+        position: relative;
+        height: 100%;
+        width: 100%;
+        display: -webkit-box !important;
+        display: -ms-flexbox !important;
+        display: flex !important;
+    }
+
+    .module--header__bg {
+        display: inherit;
+        position: absolute;
+        top: 30%;
+        left: 20%;
+        -webkit-transform: translate(-50%, -50%);
+        transform: translate(24%, -30%);
+        width: auto;
+        // height: 20;
+
+    }
+
+    .hro-img {
+        // display: inherit;
+        // position: absolute;
+        // top: 50%;
+        // left: 50%;
+        // -webkit-transform: translate(-50%,-50%);
+        // transform: translate(-50%,-50%);
+        // width: auto;
+        display: inherit;
+        position: absolute;
+        top: -360px;
+        margin: auto;
+        left: 0;
+
+        width: auto;
+        right: 0px;
+        height: 670px;
+    }
+
+    .el-bg {
+        background-image: url(/assets/resources/img/patra-elements/Patra-Icons.png);
+        position: absolute;
+        z-index: 4;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+
+    .el1 {
+        width: 40px;
+        height: 34px;
+        background-position: -43px;
+        top: 24%;
+        left: 18%;
+    }
+
+    .el2 {
+        width: 40px;
+        height: 40px;
+        background-position: 1px;
+        top: 36%;
+        left: 25%;
+    }
+
+    .el3 {
+        width: 50px;
+        height: 30px;
+        background-position: -90px;
+        top: 81%;
+        left: 26%;
+    }
+
+    .el4 {
+        width: 50px;
+        height: 33px;
+        background-position: -150px;
+        top: 15%;
+        right: 20%;
+    }
+
+    .el5 {
+        width: 40px;
+        height: 36px;
+        background-position: -288px;
+        top: 26%;
+        right: 9%;
+    }
+
+    .el6 {
+        width: 40px;
+        height: 33px;
+        background-position: -208px;
+        bottom: 21%;
+        right: 13%;
+    }
+}
+
 .flx-k{
     display: flex;
     justify-content: space-between;
