--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -1632,7 +1632,7 @@
     padding: 0;
   }
   .about-us-section .small-h1 {
-    font-size: 2.5em;
+    font-size: 2.3em;
   }
   #about2 .about-p p {
     font-size: 1.3em;
@@ -1667,7 +1667,23 @@
   }
 }
 
+@media screen and (max-width: 776px) {
+  .about-page .container .flex .right-con p {
+    font-size: 0.8em;
+  }
+  #about2 .container .parh {
+    font-size: 1em !important;
+  }
+  .client-section .container .parh {
+    font-size: 1em !important;
+  }
+  .about-us-section .small-h1 {
+    font-size: 2em !important;
+  }
+}
+
 /*############### Single Project #############*/
+
 .h2-h {
   font-size: 5em;
   font-family: "NeueHaasDisplay-me";
@@ -3979,6 +3995,10 @@
       }
     }
   }
+  .dharan .module--header__bg {
+    top: 24%;
+    left: 23%;
+  }
 }
 
 @media screen and (max-width: 1680px) {
@@ -4008,6 +4028,18 @@
       }
     }
   }
+  .dharan .module--header__bg {
+    top: 23%;
+    left: 20%;
+  }
+}
+
+@media screen and (max-width: 1536px) {
+  .dharan .module--header__bg {
+    top: 13%;
+    left: 22%;
+    width: 100px;
+  }
 }
 
 @media screen and (max-width: 1440px) {
@@ -4035,6 +4067,19 @@
     margin-top: 40%;
   }
 
+  .kedar {
+    .module--header__bg {
+      display: inherit;
+      position: absolute;
+      top: 17.5%;
+      right: 35.5%;
+      -webkit-transform: translate(16%, -8%);
+      transform: translate(16%, -8%);
+      width: auto;
+      height: 622px;
+    }
+  }
+
   .about-us-image {
     margin-top: 5%;
   }
@@ -4060,6 +4105,14 @@
         font-size: 3.6em;
       }
     }
+  }
+  .dharan .module--header__bg {
+    width: 180px;
+    top: 18.5%;
+    left: 16.5%;
+  }
+  .dharan .el1 {
+    left: 9%;
   }
 }
 
@@ -4131,6 +4184,19 @@
     padding-bottom: 8em;
   }
 
+  .kedar {
+    .module--header__bg {
+      display: inherit;
+      position: absolute;
+      top: 14.5%;
+      right: 34.1%;
+      -webkit-transform: translate(16%, -8%);
+      transform: translate(16%, -8%);
+      width: auto;
+      height: 600px;
+    }
+  }
+
   .home-sec {
     .about-us-content {
       margin-left: 30px;
@@ -4140,6 +4206,94 @@
         font-size: 3.2em;
       }
     }
+  }
+  .dharan .module--header__bg {
+    width: 150px;
+    top: 16.8%;
+    left: 13%;
+  }
+}
+
+@media screen and (max-width: 991px) {
+  .dharan .hro-img {
+    display: inherit;
+    position: block;
+    top: -360px;
+    margin: auto;
+    left: 0;
+    width: 100%;
+    right: 0px;
+    height: auto;
+  }
+  .dharan .module--header__bg {
+    width: 150px;
+    top: 25%;
+    left: 2%;
+  }
+  #colorc .right-d img {
+    width: 90%;
+  }
+  #portf {
+    padding: 200px 0 30px 0;
+  }
+  .margin-r-46 {
+    margin-right: 0px;
+  }
+  #colorc .color__section {
+    padding-left: 55px;
+    align-items: flex-start;
+  }
+  .kedar {
+    .hro-img {
+      display: inherit;
+      position: static;
+      width: 100%;
+      height: auto;
+    }
+  }
+  .kedar {
+    .module--header__bg {
+      display: none;
+    }
+  }
+}
+
+@media screen and (max-width: 776px) {
+  .dharan .hro-img {
+    display: inherit;
+    position: absolute;
+    margin: auto;
+    top: -150px;
+    width: 100%;
+    right: 0px;
+    height: auto;
+  }
+  .dharan .module--header__bg {
+    display: none;
+  }
+  .port__f {
+    padding: 110px 0px !important;
+    margin-bottom: 0%;
+    padding-bottom: 0px !important;
+  }
+  #colorc .right-d {
+    padding-top: 30px;
+    width: 100%;
+  }
+  #colorc .right-d img {
+    width: 80%;
+  }
+  .next-project__content a span {
+    font-size: 33px;
+    display: block;
+    color: transparent;
+    color: #2b2b2b5e;
+  }
+  .next-project__content a svg {
+    width: 36px;
+  }
+  .next-project {
+    padding-top: 30px;
   }
 }
 
