--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -2108,6 +2108,80 @@
     width: 60%;
   }
 }
+// PDTL ================================
+.pdtl {
+  justify-content: center !important;
+  margin-bottom: 0% !important;
+  padding-bottom: 10% !important;
+}
+#poster .ptdl__img_palette {
+  width: 60%;
+}
+#marquee .pdtl {
+  position: absolute;
+  top: -140px;
+  padding-top: 0px;
+  line-height: 0xp;
+}
+.pdtl__video {
+  line-height: 0px;
+}
+.pdtl__pd-bottom {
+  margin-bottom: 10%;
+}
+.pdtl__line-height {
+  line-height: 0px;
+}
+
+@media screen and (max-width: 1024px) {
+  #marquee .pdtl {
+    top: -95px;
+  }
+  #marquee .pdtl h2 {
+    font-size: 6em;
+  }
+  #cer .mobile__size {
+    font-size: 3em;
+  }
+  #portf .mobile__size {
+    font-size: 2em;
+  }
+}
+
+@media screen and (max-width: 991px) {
+  #marquee .pdtl {
+    top: -80px;
+  }
+  #marquee .pdtl h2 {
+    font-size: 7em;
+  }
+  #poster .ptdl__img_palette {
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 776px) {
+  #portf .mobile__size {
+    font-size: 2.5em;
+  }
+  #cer .mobile__size {
+    font-size: 2.5em;
+  }
+  #marquee .pdtl__margin-top {
+    margin-top: 0px !important;
+  }
+  #marquee .pdtl h2 {
+    font-size: 3em;
+  }
+  #marquee .pdtl {
+    top: -60px;
+  }
+  #marquee .pdtl__mt-0 {
+    margin-top: 0 !important;
+  }
+}
+// PDEL END ======================================
+
 .flx-k1 {
   display: flex;
   justify-content: space-between;
