--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -2582,6 +2582,55 @@
 #start h1 > div {
   overflow: hidden;
 }
+// Certvault Sakib
+#marquee .color__red {
+  color: red;
+  z-index: 999;
+  padding: 100px 0;
+}
+
+#marquee > div .z__ind {
+  z-index: 999;
+  top: -7vh;
+  padding-top: 0;
+}
+
+.blocco div.mb__bottom {
+  margin-bottom: 0 !important;
+}
+
+.m__p {
+  margin-top: 10% !important;
+}
+
+@media screen and (max-width: 991px) {
+  #colorc h2 {
+    line-height: calc(-40px + 396 * ((100vw - 320px) / 1920)) !important;
+  }
+}
+@media screen and (max-width: 771px) {
+  .patra .display__none {
+    display: none;
+  }
+  #colorc h2 {
+    line-height: calc(15px + 396 * ((100vw - 320px) / 1920)) !important;
+  }
+  #colorc ul li > div > div {
+    width: 100px !important;
+    height: 100px !important;
+  }
+  #colorc ul li:nth-child(2) > div > div {
+    padding-top: 0px !important;
+  }
+  #colorc ul.is-inview li > div {
+    margin-top: -35px;
+  }
+  #marquee .color__red {
+    font-size: 3em !important;
+  }
+}
+
+// CertVault Sakib End
 
 #start h1 > div > span {
   display: block;
@@ -3806,11 +3855,11 @@
 
 #colorc ul li > div > div {
   padding: 30px;
-  width: 10vw;
+  width: 150px;
   position: absolute;
-  height: 18vh;
+  height: 150px;
   /* z-index: 12; */
-  border-radius: 90px;
+  border-radius: 100px;
   right: 0;
   top: 0px;
   -webkit-box-sizing: border-box;
