--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -2603,6 +2603,12 @@
   margin-top: 10% !important;
 }
 
+.certvault .module--header__bg {
+  top: 34%;
+  right: 42.5%;
+  height: 545px;
+}
+
 @media screen and (max-width: 991px) {
   #colorc h2 {
     line-height: calc(-40px + 396 * ((100vw - 320px) / 1920)) !important;
