--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -6975,6 +6975,11 @@ header {
 .m__p {
   margin-top: 10% !important;
 }
+.certvault .module--header__bg {
+  top: 34%;
+  right: 42.5%;
+  height: 545px;
+}
 @media screen and (max-width: 991px) {
   #colorc h2 {
     line-height: calc(-40px + 396 * ((100vw - 320px) / 1920)) !important;
